// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders TabPanel active correctly 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#f6f8fa",
      "display": "block",
      "padding": 12,
    }
  }
>
  <div>
    Tab panel Content
  </div>
</div>
`;

exports[`renders TabPanel non-active correctly 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#f6f8fa",
      "display": "none",
      "padding": 12,
    }
  }
>
  <div>
    Tab panel Content
  </div>
</div>
`;
